# voxel-renderer

./: Cargo.toml  README.md
assets/src/: chunk.wgsl  lib.rs  triangle.wgsl
src/: camera.rs  main.rs  window.rs
src/gfx/: mod.rs  operation.rs  state.rs  vertex.rs
src/world/: chunk.rs  mod.rs
