workspace = { members = ["assets"] }

[package]
name = "voxel-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
assets = { path = "assets" }
bytemuck = { version = "1.14.1", features = ["derive"] }
env_logger = "0.11.1"
glam = "0.25.0"
itertools = "0.12.1"
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.19.1"
winit = "0.29.10"
